@최원석 빌드를 위한 수정중

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,14 +1,14 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TEST1.TEST1
+EditorStartupMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/AI/HeroMonster_GameInstance.HeroMonster_GameInstance_C
-GameDefaultMap=/Game/Maps/TEST1.TEST1
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/AI/GM_HeroMonster.GM_HeroMonster_C
+GameDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
+ServerDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
+GlobalDefaultGameMode=/Game/HR/BP_HRGM.BP_HRGM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.Engine]
@@ -46,6 +46,8 @@ DataGatheringMode=Instant
 bGenerateNavigationOnlyAroundNavigationInvokers=False
 ActiveTilesUpdateInterval=1.000000
 DirtyAreasUpdateFreq=60.000000
+bSpawnNavDataInNavBoundsLevel=False
+bShouldDiscardSubLevelNavData=True
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
