--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,27 +64,6 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 
-[/Script/NavigationSystem.RecastNavMesh]
-bForceRebuildOnLoad=True
-RuntimeGeneration=Dynamic
-ObservedPathsTickInterval=0.100000
-bCanBeMainNavData=False
-AgentRadius=20.000000
-AgentHeight=40.000000
-AgentMaxHeight=40.000000
-AgentMaxSlope=1.000000
-AgentMaxStepHeight=1.000000
-CellHeight=126.000000
-CellSize=1.000000
-TileSizeUU=1024.000000
-bFixedTilePoolSize=False
-MinRegionArea=40.000000
-MergeRegionSize=1.000000
-MaxSimplificationError=1.000000
-bSortNavigationAreasByCost=False
-VerticalDeviationFromGroundCompensation=0.000000
-HeuristicScale=0.999000
-
 [/Script/AIModule.CrowdManager]
 MaxAgents=50
 MaxAgentRadius=100.000000
@@ -160,6 +139,51 @@ bResolveCollisions=False
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/NavigationSystem.RecastNavMesh]
+bDrawPolyEdges=False
+bDistinctlyDrawTilesBeingBuilt=True
+DrawOffset=10.000000
+bFixedTilePoolSize=False
+TilePoolSize=1024
+TileSizeUU=1024.000000
+CellSize=1.000000
+CellHeight=126.000000
+AgentRadius=20.000000
+AgentHeight=40.000000
+AgentMaxHeight=40.000000
+AgentMaxSlope=1.000000
+AgentMaxStepHeight=1.000000
+MinRegionArea=40.000000
+MergeRegionSize=1.000000
+MaxSimplificationError=1.000000
+MaxSimultaneousTileGenerationJobsCount=1024
+TileNumberHardLimit=1048576
+DefaultDrawDistance=5000.000000
+DefaultMaxSearchNodes=2048.000000
+DefaultMaxHierarchicalSearchNodes=2048.000000
+RegionPartitioning=Watershed
+LayerPartitioning=Watershed
+RegionChunkSplits=2
+LayerChunkSplits=2
+bSortNavigationAreasByCost=False
+bPerformVoxelFiltering=True
+bMarkLowHeightAreas=False
+bFilterLowSpanSequences=False
+bFilterLowSpanFromTileCache=False
+bDoFullyAsyncNavDataGathering=False
+bUseBetterOffsetsFromCorners=True
+bStoreEmptyTileLayers=False
+bUseVirtualFilters=True
+bAllowNavLinkAsPathEnd=False
+bUseVoxelCache=False
+TileSetUpdateInterval=1.000000
+HeuristicScale=0.999000
+VerticalDeviationFromGroundCompensation=0.000000
+bForceRebuildOnLoad=True
+bCanBeMainNavData=False
+RuntimeGeneration=Dynamic
+ObservedPathsTickInterval=0.100000
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
