--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -70,7 +70,7 @@ MinimumiOSVersion=IOS_11
 bForceRebuildOnLoad=True
 RuntimeGeneration=Dynamic
 ObservedPathsTickInterval=0.100000
-bCanBeMainNavData=False
+bCanBeMainNavData=True
 AgentRadius=20.000000
 AgentHeight=40.000000
 AgentMaxHeight=40.000000
