--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,13 +1,13 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
+EditorStartupMap=/Game/HR/map/TutorialStage.TutorialStage
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/AI/HeroMonster_GameInstance.HeroMonster_GameInstance_C
-GameDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
-ServerDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
+GameDefaultMap=/Game/HR/map/TutorialStage.TutorialStage
+ServerDefaultMap=/Game/HR/map/TutorialStage.TutorialStage
 GlobalDefaultGameMode=/Game/HR/BP_HRGM.BP_HRGM_C
 GlobalDefaultServerGameMode=None
 
