코인 파리채 추가 파리채를 놓으면 상단에 자동스폰 파리채 사라질때 사운드 추가해야됨

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -144,6 +144,7 @@ bResolveCollisions=False
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,Name="Teleport",DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel5,Name="Menu",DefaultResponse=ECR_Ignore,bTraceType=False,bStaticObject=False)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel6,Name="SpawnArea",DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False)
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel7,Name="Pick",DefaultResponse=ECR_Overlap,bTraceType=False,bStaticObject=False)
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
 -ProfileRedirects=(OldName="StaticMeshComponent",NewName="BlockAllDynamic")
