@최원석 튜토맵 생성

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,13 +1,13 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/HR/map/TutorialStage.TutorialStage
+EditorStartupMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/AI/HeroMonster_GameInstance.HeroMonster_GameInstance_C
-GameDefaultMap=/Game/HR/map/TutorialStage.TutorialStage
-ServerDefaultMap=/Game/HR/map/TutorialStage.TutorialStage
+GameDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
+ServerDefaultMap=/Game/HR/map/StartMenuTest2.StartMenuTest2
 GlobalDefaultGameMode=/Game/HR/BP_HRGM.BP_HRGM_C
 GlobalDefaultServerGameMode=None
 
@@ -206,5 +206,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
